# multi_agent_pattern_agent

./: README.md  main.py  pyproject.toml
multi_agent_pattern_agent/: agent.py  blog_crew.py  crew.py  task.py  tool.py  tools.py
tests/: test_crew.py
