[project]
name = "multi_agent_pattern_agent"
version = "0.1.0"
authors = [
    { name="Priscila Santos", email="priscila.olimpia@gmail.com" },
]
description = "A collaborative multi-agent system designed to write blog posts."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["multi_agent_pattern_agent*"]